fix link spacing

--- a/styles/general.css
+++ b/styles/general.css
@@ -26,3 +26,6 @@ a {
 html {
     scroll-behavior: smooth;
 }
+#skills {
+    scroll-margin-top: 100px; 
+}
