--- a/styles/header.css
+++ b/styles/header.css
@@ -5,6 +5,13 @@
     justify-content: space-between;
     align-items: center;
     flex-shrink: 0;
+    background: linear-gradient(135 deg, rgba(255, 255, 255, 0.1), rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: (blur(10px));
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    position: fixed;
+    
+    width: 1000px;
 }
 
 /* left-section*/
